large update to dev kit gradle plugins